# ShadyRay

./: CMakeLists.txt  README.md
ShadyRay/: readme.txt  scene.lua
ShadyRay/src/: camera.cpp  camera.hpp  defs.hpp  film.cpp  film.hpp  filter.cpp  filter.hpp  geometry.cpp  geometry.hpp  image.cpp  image.hpp  integrator.hpp  integratorth.hpp  interaction.hpp  light.cpp  light.hpp  linalg.cpp  linalg.hpp  luaintegration.hpp  material.cpp  material.hpp  memorypool.cpp  memorypool.hpp  particletracer.cpp  particletracer.hpp  pathintegrator.hpp  pathintegratorth.hpp  ppm.cpp  ppm.hpp  ray.cpp  ray.hpp  sampler.cpp  sampler.hpp  scene.cpp  scene.hpp  sdlfilm.cpp  sdlfilm.hpp  shadyray.cpp  spectrum.cpp  spectrum.hpp  (+4 more)
